tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_33.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  q := ((((p - x) DIV (x DIV 0)) * (- (- 200))) = (((x MOD 0) DIV (y DIV 200)) DIV ((1 - 0) * (- 2))));
               x := (+ (- (+ (2 DIV 1223))));
               q := (((- (z * 0)) MOD ((- z) * (1 MOD 1))) > ((- (x DIV z)) - ((+ 200) MOD (2 MOD 0))));
               p := ((((x - x) + (1223 + z)) * ((x - 1) - (z MOD y))) < (((- 1223) + (200 DIV x)) * ((2 * z) * (x DIV y))));
               y := ((((0 DIV x) - (+ z)) MOD (- (1223 MOD x))) + (+ ((- 2) + (+ x))));
               y := (((- (1223 MOD 1)) * ((x DIV y) - (- z))) * (((+ y) MOD (1 + 1)) * ((2 * 1) MOD (z DIV y))));
               r := ((((+ 1223) DIV (- y)) DIV ((200 + z) MOD (x + 2))) >= (((2 - 0) + (0 DIV 2)) DIV (- (1223 * 1))));
               z := ((((1223 DIV 200) MOD (200 MOD 2)) MOD ((200 DIV z) MOD (+ x))) + (- ((200 * 0) DIV (+ 0))));
               y := ((((z + z) * (1 MOD 1)) * ((0 * z) MOD (x DIV 2))) MOD (+ ((x MOD 2) + (z MOD 0))));
               y := ((+ ((- z) DIV (x - 200))) DIV (- ((200 DIV 2) * (- 1223))))
END Test11.